# RussianRouletteGame

./: CMakeLists.txt  README.md  main.cpp
Controller/: GameController.cpp  GameController.h
Helpers/: ConsoleHelpers.cpp  ConsoleHelpers.h
Players/: Player.cpp  Player.h
